<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculator_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.CalculatorActivity">

    <TextView
        android:id="@+id/formula"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.1"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin"
        android:textAlignment="viewEnd"
        android:textSize="@dimen/formula_text_size" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.1"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin"
        android:text="0"
        android:textAlignment="viewEnd"
        android:textSize="@dimen/display_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_p0"
            style="@style/CButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="(" />

        <Button
            android:id="@+id/btn_p1"
            style="@style/CButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text=")" />

        <Button
            android:id="@+id/btn_clear"
            style="@style/CButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_clear" />

        <Button
            android:id="@+id/btn_delete"
            style="@style/CButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_delete" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_7"
            style="@style/CButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_7" />

        <Button
            android:id="@+id/btn_8"
            style="@style/CButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_8" />

        <Button
            android:id="@+id/btn_9"
            style="@style/CButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_9" />

        <Button
            android:id="@+id/btn_divide"
            style="@style/CButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="/" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_4"
            style="@style/CButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_4" />

        <Button
            android:id="@+id/btn_5"
            style="@style/CButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_5" />

        <Button
            android:id="@+id/btn_6"
            style="@style/CButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_6" />

        <Button
            android:id="@+id/btn_multiply"
            style="@style/CButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_multiply" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_1"
            style="@style/CButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_1" />

        <Button
            android:id="@+id/btn_2"
            style="@style/CButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_2" />

        <Button
            android:id="@+id/btn_3"
            style="@style/CButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_3" />

        <Button
            android:id="@+id/btn_minus"
            style="@style/CButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_minus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_0"
            style="@style/CButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_0" />

        <Button
            android:id="@+id/btn_decimal"
            style="@style/CButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_decimal" />

        <Button
            android:id="@+id/btn_equal"
            style="@style/CButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="=" />

        <Button
            android:id="@+id/btn_plus"
            style="@style/CButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_plus" />

    </LinearLayout>

</LinearLayout>